fixed layout problems

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,8 @@
 
 body, h1, h2, nav, header,ul, li{
 	margin:0;
-	padding:0px;}
+	padding:0px;
+	font-family:'Open Sans', sans serif;}
 	
 	
 
@@ -15,27 +16,25 @@ body, h1, h2, nav, header,ul, li{
 	-moz-box-sizing:border-box;
 	box-sizing:border-box}
 
-.wrapper{
-	max-width: 1170px;
-	margin: 0 auto;
-	padding-top:100px;
-	padding-left:18%;
-	padding-right:18%;
+.wrapper {
+  max-width: 1170px;
+  margin: 0 auto;
+  overflow: auto;
+}
 	
-	
-	}
-	
-.column-intro{
-	width:60%;
-	float:left;}	
+.intro {
+  float:left;
+  width:45%;
+  margin-top:350px;
+}
 	
 .people{
 	font:bold}
 	
 .quotation-marks{
-	font:	Georgia,Constantia, "Lucida Bright", "DejaVu Serif", serif;
+	font:'Open-Sans';
 	text-align:center;
-	font-size}
+	font-size:x-large}
 	
 .column-features{
 	margin: 0%;
@@ -44,10 +43,11 @@ body, h1, h2, nav, header,ul, li{
 	
 .home-image{
   position:absolute;
-  size:30%;
   bottom:0;
   right:0;
-  z-index:0;}
+  z-index:0;
+}
+
 
 .column-people{
 	width:18%;
@@ -101,14 +101,15 @@ footer {
 	background-color:#CDCDCD;
 	padding:2 2 2 2}
 	
-#screenshots{
+#screenshots #people_behind_app{
 	clear:both;
-	background-color:#E4E4E4;
+	background-color:#fafafa;
 	overflow: auto;}
 	
 #introducing_umbrella{
-	clear:both;
-	background-image:url(../images/background.png);
+  background: #f8e514 url("../images/background.png") no-repeat center;
+  background-height: 100%;
+  min-height:780px;
 }
 
 #introducing_umbrella .wrapper {
